Correct Sonar Issue